--- a/helm-release/external-dns/external-dns.yaml
+++ b/helm-release/external-dns/external-dns.yaml
@@ -1,3 +1,12 @@
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: external-dns
+  namespace: flux-system
+spec:
+  interval: 60m
+  url: https://kubernetes-sigs.github.io/external-dns
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -5,6 +14,9 @@ metadata:
   namespace: kube-system
 spec:
   interval: 5m
+  dependsOn:
+    - name: external-dns
+      namespace: flux-system
   chart:
     spec:
       chart: external-dns
