--- a/helm-release/keda/keda.yaml
+++ b/helm-release/keda/keda.yaml
@@ -1,3 +1,12 @@
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: keda
+  namespace: flux-system
+spec:
+  interval: 60m
+  url: https://kedacore.github.io/charts
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -5,6 +14,9 @@ metadata:
   namespace: techops
 spec:
   interval: 5m
+  dependsOn:
+    - name: keda
+      namespace: flux-system
   chart:
     spec:
       chart: keda
