--- a/helm-release/nginx-ingress/nginx-ingress.yaml
+++ b/helm-release/nginx-ingress/nginx-ingress.yaml
@@ -1,3 +1,12 @@
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: nginx-ingress
+  namespace: flux-system
+spec:
+  interval: 60m
+  url: https://helm.nginx.com/stable
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -5,6 +14,9 @@ metadata:
   namespace: podinfo
 spec:
   interval: 5m
+  dependsOn:
+    - name: nginx-ingress
+      namespace: flux-system
   chart:
     spec:
       chart: nginx-ingress
