--- a/helm-release/podinfo/podinfo.yaml
+++ b/helm-release/podinfo/podinfo.yaml
@@ -1,3 +1,12 @@
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: podinfo
+  namespace: flux-system
+spec:
+  interval: 60m
+  url: https://stefanprodan.github.io/podinfo
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -5,6 +14,11 @@ metadata:
   namespace: podinfo
 spec:
   interval: 5m
+  dependsOn:
+    - name: podinfo
+      namespace: flux-system
+    - name: nginx-ingress
+      namespace: kube-system
   chart:
     spec:
       chart: podinfo
@@ -13,5 +27,3 @@ spec:
         kind: HelmRepository
         name: podinfo
         namespace: flux-system
-  values:
-    # Inline environment-specific values can be provided here
