--- a/helm-release/prometheus/prometheus.yaml
+++ b/helm-release/prometheus/prometheus.yaml
@@ -1,3 +1,12 @@
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: prometheus
+  namespace: flux-system
+spec:
+  interval: 60m
+  url: https://prometheus-community.github.io/helm-charts
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -5,6 +14,9 @@ metadata:
   namespace: kube-system
 spec:
   interval: 5m
+  dependsOn:
+    - name: prometheus
+      namespace: flux-system
   chart:
     spec:
       chart: prometheus
@@ -13,5 +25,3 @@ spec:
         kind: HelmRepository
         name: prometheus
         namespace: flux-system
-  values:
-    # Inline environment-specific values can be provided here
