--- a/helm-release/sample-app/sample-app.yaml
+++ b/helm-release/sample-app/sample-app.yaml
@@ -1,3 +1,12 @@
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: sample-app
+  namespace: flux-system
+spec:
+  interval: 60m
+  url: https://helm.github.io/examples
+---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -5,6 +14,9 @@ metadata:
   namespace: sample-app
 spec:
   interval: 5m
+  dependsOn:
+    - name: sample-app
+      namespace: flux-system
   chart:
     spec:
       chart: hello-world
@@ -13,5 +25,3 @@ spec:
         kind: HelmRepository
         name: sample-app
         namespace: flux-system
-  values:
-    # Inline environment-specific values can be provided here
