--- a/helm-release/external-dns/external-dns.yaml
+++ b/helm-release/external-dns/external-dns.yaml
@@ -23,7 +23,7 @@ spec:
       version: ''
       sourceRef:
         kind: HelmRepository
-        name: external-dns
+        name: external-dns-repo
         namespace: flux-system
   valuesFrom:
     - configMapKeyRef:
