--- a/helm-release/external-dns/kustomization.yaml
+++ b/helm-release/external-dns/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - external-dns.yaml
+  - external-dns.repo.yaml
+  - external-dns.release.yaml
 
 configMapGenerator:
   - name: external-dns-common-values
