adding namespace for configmap

--- a/helm-release/external-dns/kustomization.yaml
+++ b/helm-release/external-dns/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
 
 configMapGenerator:
   - name: external-dns-common-values
+    namespace: kube-system
     files:
       - common.values.yaml
     options:
