--- a/helm-release/external-dns/external-dns.release.yaml
+++ b/helm-release/external-dns/external-dns.release.yaml
@@ -16,3 +16,8 @@ spec:
         kind: HelmRepository
         name: external-dns-repo
         namespace: flux-system
+  valuesFrom:
+    - configMapKeyRef:
+        name: external-dns-common-values
+        namespace: kube-system
+        key: common.values.yaml
