--- a/helm-release/external-dns/external-dns.repo.yaml
+++ b/helm-release/external-dns/external-dns.repo.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: external-dns-repo
-  namespace: flux-system
+  namespace: kube-system
 spec:
   interval: 60m
   url: https://kubernetes-sigs.github.io/external-dns
