Adding values for testing

--- a/helm-release/external-dns/common.values.yaml
+++ b/helm-release/external-dns/common.values.yaml
@@ -2,3 +2,6 @@ namespace: 'kube-system'
 serviceAccount:
   create: true
   name: 'external-dns-sa'
+serviceMonitor:
+  enabled: true
+  interval: 30s
